# blas-traits

./: Cargo.toml  readme.md
src/: amax.rs  asum.rs  gemm.rs  herk.rs  lib.rs  simba_feat.rs  syrk.rs  xgemm.rs
src/blas/: amax.rs  asum.rs  axpy.rs  gemm.rs  herk.rs  mod.rs  nrm2.rs  syrk.rs
src/blas_impl/: amax.rs  asum.rs  axpy.rs  gemm.rs  herk.rs  syrk.rs
src/lapack/: geqrf.rs  gesv.rs  heevr.rs  heevx.rs  mod.rs
src/lapack_impl/: geqrf.rs  gesv.rs  heevr.rs  heevx.rs  mod.rs
src/lapack_traits/: geqrf.rs  gesv.rs  heevx.rs  mod.rs
