[package]
name = "lapack-traits"
version = "0.3.0"
authors = ["Humberto Munoz Bauza <humberto.munozb@gmail.com>"]
edition = "2018"

description = "Generic real/complex scalar trait wrappers for BLAS and LAPACK routines"
keywords = ["algebra", "blas", "lapack", "complex"]
categories = ["mathematics", "science", "simulation"]

readme = "readme.md"
repository = "https://github.com/hmunozb/lapack-traits/"
license = "MIT"

[dependencies]
cblas = "0.3"
lapacke = "0.3"
num-complex = "0.3"
simba = { version="0.4", optional=true }

[dev-dependencies]
openblas-src = { version="0.10", default-features=false, features=["system"] }
lapacke-sys = "0.1.4"