[package]
name = "lapack-traits"
version = "0.3.1"
authors = ["Humberto Munoz Bauza <humberto.munozb@gmail.com>"]
edition = "2018"

description = "Generic real/complex scalar trait wrappers for BLAS and LAPACK routines"
keywords = ["algebra", "blas", "lapack", "complex"]
categories = ["mathematics", "science", "simulation"]

readme = "readme.md"
repository = "https://github.com/hmunozb/lapack-traits/"
license = "MIT"

[dependencies]
blas = "0.22.0"
lapack = "0.19"
num-complex = "0.4"
simba = { version="0.5", optional=true }

[dev-dependencies]
blas-sys = "0.7.1"
lapack-sys = "0.14.0"
#openblas-src = { version="0.10", default-features=false, features=["system"] }
#lapacke-sys = "0.1.4"